--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
     - testing
 
 env:
+  - REDMINE_VERSION=2.3.2 VERBOSE=yes
   - REDMINE_VERSION=2.5.3 VERBOSE=yes
   - REDMINE_VERSION=2.4.4 VERBOSE=yes
   - REDMINE_VERSION=2.6.1 VERBOSE=yes
